Beta 10 Hot fix NullPointerException and not loading modpack